karnc/tests/fixtures/negative/118_queue_duplicate_consumer/src/svc.karn
context svc

service worker from queue("q") {
  on message(message: String) -> Effect[QueueResult] {
    Ack
  }

  on message(message: String) -> Effect[QueueResult] {
    Ack
  }
}
